Fix play button size on mobile (2)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -225,11 +225,13 @@ a.anchor {
   position: absolute;
   opacity: 1;
   transition: opacity 250ms ease-in;
-  object-fit: contain;
   cursor: pointer;
 }
 
 .content-mobile-playbutton {
+  position: absolute;
+  width: 30%;
+  height: 30%;
   cursor: pointer;
   transition: opacity 250ms ease-in;
 }
@@ -240,10 +242,16 @@ a.anchor {
 }
 
 .header-bottom-playbutton svg, .content-mobile-playbutton svg {
+  position: relative;
   width: 100%;
   height: 100%;
+  object-fit: contain;
   transform: scale(1.0);
   transition: transform 100ms ease-in;
+}
+
+.content-mobile-playbutton svg {
+  display: block;
 }
 
 .header-bottom-playbutton:hover svg, .content-mobile-playbutton:hover svg {
